--- a/index.html
+++ b/index.html
@@ -4,112 +4,125 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Site Name</title>
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Questrial|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+
     <link rel="stylesheet" type="text/css" href="css/style.css">
+
   </head>
   <body>
+    
     <header>
-      <h1><a href="#">Site Name</a></h1>
-      <h2>website subtitle</h2>
       <nav>
-        <a href="#" id="mobile" class="fa fa-bars"></a>
-        <a href="#">Page 1</a>
-        <a href="#">Page 2</a>
-        <a href="#">Page 3</a>
-        <a href="#">Page 4</a>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#photos">Photos</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#shop">Shop</a></li>
+          <li><a href="#testimonials">Jobs</a></li>
+        </ul>
       </nav>
+      <a href="#photos"><img src="images/arrow.svg" alt=""></a>
     </header>
-    <section>
-      <h3>Teaser text to keep user interested</h3>
-    </section>
-    <section class="featured">
-      <div class="col-3">
-        <i class="fa fa-lightbulb-o"></i>
-        <h4>Feature 1</h4>
+
+    <section id="photos" class="instagram">
+      <h2>Our Work</h2>
+      <div class="col-4">
+        <img src="images/insta_1.jpg" alt="Another satisfied customer">
       </div>
-      <div class="col-3">
-        <i class="fa fa-desktop"></i>
-        <h4>Feature 2</h4>
+      <div class="col-4">
+        <img src="images/insta_2.jpg" alt="Hair for days">
       </div>
-      <div class="col-3">
-        <i class="fa fa-paper-plane-o"></i>
-        <h4>Feature 3</h4>
+      <div class="col-4">
+        <img src="images/insta_3.jpg" alt="A nice trim">
       </div>
+      <div class="col-4">
+        <img src="images/insta_4.jpg" alt="Happy guy">
+      </div>
+      <a href="https://www.instagram.com" class="btn">Check out our Instagram</a>
     </section>
-    <section>
-      <p>Expedite procedures user iterate embrace compellingly enhance enhance appropriately concept stand-alone communicate. Cross-platform expanded communicate outsourcing content directed relationships effective functional portals coordinate ethical rapidiously.</p>
-      <p>Scale distinctive incentivize go user action after performance disseminate "organic" enterprise-wide incubate future-proof. Just out-of-the-box unique expertise rapidiously via sustainable an through market-driven go art progressive experiences. </p>
+    <section id="testimonials" class="testimonials">
+      <blockquote><p>&ldquo;I walked in with an untamed mane and walked out looking like quite the distinguished gentleman.&rdquo;</p></blockquote>
+      <p>&mdash; John D.</p>
+
     </section>
-    <section>
-      <figure class="col-3">
-        <img src="images/placeholder.png" alt="Placeholder Image" title="Placeholder Image">
-        <figcaption>Photo Credit</figcaption>
-      </figure>
-      <figure class="col-3">
-        <img src="images/placeholder.png" alt="Placeholder Image" title="Placeholder Image">
-        <figcaption>Photo Credit</figcaption>
-      </figure>
-      <figure class="col-3">
-        <img src="images/placeholder.png" alt="Placeholder Image" title="Placeholder Image">
-        <figcaption>Photo Credit</figcaption>
-      </figure>
-      <figure class="col-3">
-        <img src="images/placeholder.png" alt="Placeholder Image" title="Placeholder Image">
-        <figcaption>Photo Credit</figcaption>
-      </figure>
-      <figure class="col-3">
-        <img src="images/placeholder.png" alt="Placeholder Image" title="Placeholder Image">
-        <figcaption>Photo Credit</figcaption>
-      </figure>
-      <figure class="col-3">
-        <img src="images/placeholder.png" alt="Placeholder Image" title="Placeholder Image">
-        <figcaption>Photo Credit</figcaption>
-      </figure>
-    </section>
-    <section>
-      <p>Expedite procedures user iterate embrace compellingly enhance enhance appropriately concept stand-alone communicate. Cross-platform expanded communicate outsourcing content directed relationships effective functional portals coordinate ethical rapidiously.</p>
-      <p>Expedite procedures user iterate embrace compellingly enhance enhance appropriately concept stand-alone communicate. Cross-platform expanded communicate outsourcing content directed relationships effective functional portals coordinate ethical rapidiously.</p>
-    </section>
-    <section>
-      <blockquote>
-        Disseminate e-tailers credibly resources brand turnkey facilitate mesh enterprise-wide quickly ethical data. Team deliverables optimize fabricate unleash superior plug-and-play reconceptualize bricks-and-clicks.
-      </blockquote>
-    </section>
-    <section>
-      <p>Objectively niche process-centric aggregate skills sustainable enterprise-wide methods methodologies empowered enterprise-wide best-of-breed bricks-and-clicks. Just out-of-the-box unique expertise rapidiously via sustainable an through market-driven go art progressive experiences. Ideas base data invested high-yield authoritatively productivate innovate e-business intellectual imperatives disintermediate.</p>
-    </section>
-    <footer>
+
+    <section id="book" class="booking cf">
+      <h2>Book a Service</h2>
       <div class="col-3">
-        <h5>Footer 1</h5>
+        <p>Choose a service.</p>
         <ul>
-          <li>Item 1</li>
-          <li>Item 2</li>
-          <li>Item 3</li>
-          <li>Item 4</li>
-          <li>Item 5</li>
+          <li>
+            <h3><a href="#">Haircut <span>$35</span></a></h3>
+          </li>
+          <li class="selected">
+            <h3><a href="#">Buzz <span>$18</span></a></h3>
+          </li>
+          <li>
+            <h3><a href="#">Straight Razor Shave <span>$28</span></a></h3>
+          </li>
+          <li>
+            <h3><a href="#">Mustache Trim <span>$5</span></a></h3>
+          </li>
+          <li>
+            <h3><a href="#">Beard Trim <span>$11</span></a></h3>
+          </li>
+          <li>
+            <h3><a href="#">Shave &amp; Haircut <span>$10</span></a></h3>
+          </li>
         </ul>
       </div>
       <div class="col-3">
-        <h5>Footer 2</h5>
+        <p>Choose a stylist.</p>
         <ul>
-          <li>Item 1</li>
-          <li>Item 2</li>
-          <li>Item 3</li>
-          <li>Item 4</li>
-          <li>Item 5</li>
+          <li>
+            <h3><a href="#">Bill</a></h3>
+          </li>
+          <li>
+            <h3><h3><a href="#">Sharon</a></h3>
+          </li>
+          <li>
+            <h3><a href="#">Phil</a></h3>
+          </li>
+          <li class="selected">
+            <h3><a href="#">Ronette</a></h3>
+          </li>
+          <li>
+            <h3><a href="#">Matt</a></h3>
+          </li>
+          <li>
+            <h3><a href="#">Marc</a></h3>
+          </li>
         </ul>
       </div>
       <div class="col-3">
-        <h5>Footer 3</h5>
-        <ul>
-          <li>Item 1</li>
-          <li>Item 2</li>
-          <li>Item 3</li>
-          <li>Item 4</li>
-          <li>Item 5</li>
-        </ul>
+        <p>Enter your info.</p>
+        <form action="">
+          <input type="text" placeholder="Full name">
+          <input type="text" placeholder="Phone number">
+          <input type="email" placeholder="Email">
+          <button  class="btn" type="submit">Book Now</button>
+        </form>
       </div>
-    </footer>
+    </section>
+
+    <div class="fixed-image-panel"></div>
+
+    <section class="newsletter">
+      <button class="btn">Sign up for our Newsletter</button>
+    </section>
+
+    <footer class="cf">
+      <div class="social-links">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-pinterest"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+      </div>
+      <div class="copyright-info">
+        <p>&copy; 2016 Proper Barber Shop. All Rights Reserved. &nbsp; <a href="#">Privacy</a> | <a href="#">Terms of use</a></p>
+      </div></footer>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/project.js" type="text/javascript"></script>
   </body>
