--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Site Name</title>
-    
+
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Questrial|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
@@ -43,7 +43,7 @@
       <a href="https://www.instagram.com" class="btn">Check out our Instagram</a>
     </section>
     <section id="testimonials" class="testimonials">
-      <blockquote><p>&ldquo;I walked in with an untamed mane and walked out looking like quite the distinguished gentleman.&rdquo;</p></blockquote>
+      <blockquote><p>&ldquo;I walked in with an untamed mane and walked out looking like a distinguished gentleman.&rdquo;</p></blockquote>
       <p>&mdash; John D.</p>
 
     </section>
