--- a/index.html
+++ b/index.html
@@ -27,31 +27,9 @@
       <a href="#photos" class="scroll"><img src="images/arrow.svg" alt=""></a>
     </header>
 
-    <section id="photos" class="instagram">
-      <h2>Our Work</h2>
-      <div class="col-4">
-        <img src="images/insta_1.jpg" alt="Another satisfied customer">
-      </div>
-      <div class="col-4">
-        <img src="images/insta_2.jpg" alt="Hair for days">
-      </div>
-      <div class="col-4">
-        <img src="images/insta_3.jpg" alt="A nice trim">
-      </div>
-      <div class="col-4">
-        <img src="images/insta_4.jpg" alt="Happy guy">
-      </div>
-      <a href="https://www.instagram.com" class="btn">Check out our Instagram</a>
-    </section>
-    <section id="testimonials" class="testimonials">
-      <blockquote><p>&ldquo;I walked in with an untamed mane and walked out a distinguished gentleman.&rdquo;</p></blockquote>
-      <p>&mdash; John D.</p>
-
-    </section>
-
     <section id="book" class="booking cf">
       <h2>Book an Appointment</h2>
-      <div id="step_one" class="col-3 progress">
+      <div class="step">
         <p>Choose a service.</p>
         <ul>
           <li>
@@ -70,11 +48,11 @@
             <a href="#">Beard Trim <span>$11</span></a>
           </li>
           <li>
-            <a href="#">Shave &amp; Haircut <span>$10</span></a>
+            <a href="#">Shave &amp; Haircut <span>$45</span></a>
           </li>
         </ul>
       </div>
-      <div id="step_two" class="col-3">
+      <div class="step">
         <p>Choose a stylist.</p>
         <ul>
           <li>
@@ -97,24 +75,45 @@
           </li>
         </ul>
       </div>
-      <div class="col-3">
+      <div class="step">
         <p>Enter your info.</p>
-        <form id="booking_form" action="">
+        <form id="booking-form" action="">
           <div class="input-wrapper">
-            <input id="full_name" type="text" placeholder="Full name" class="error">
-            <div class="error-message">Please enter your full name.</div>
+            <input id="full-name" type="text" placeholder="Full name" autocomplete="off">
           </div>
           <div class="input-wrapper">
-            <input id="phone" type="text" placeholder="Phone number">
-            <div class="error-message">Please enter your full name.</div>
+            <input id="phone" type="text" placeholder="Phone number" autocomplete="off">
           </div>
           <div class="input-wrapper">
-            <input id="email" type="text" placeholder="Email">
-            <div class="error-message">Please enter your full name.</div>
+            <input id="email" type="text" placeholder="Email" autocomplete="off">
           </div>
           <button class="btn" type="submit">Book Now</button>
         </form>
       </div>
+    </section>
+
+
+    <section id="testimonials" class="testimonials">
+      <blockquote><p id="quote">&ldquo;I walked in with an untamed mane and walked out a distinguished gentleman.&rdquo;</p></blockquote>
+      <p id="author">&mdash; John D.</p>
+
+    </section>
+
+    <section id="photos" class="instagram">
+      <h2>Our Work</h2>
+      <div class="col-4">
+        <img src="images/insta_1.jpg" alt="Another satisfied customer">
+      </div>
+      <div class="col-4">
+        <img src="images/insta_2.jpg" alt="Hair for days">
+      </div>
+      <div class="col-4">
+        <img src="images/insta_3.jpg" alt="A nice trim">
+      </div>
+      <div class="col-4">
+        <img src="images/insta_4.jpg" alt="Happy guy">
+      </div>
+      <a href="https://www.instagram.com" class="btn">Check out our Instagram</a>
     </section>
 
     <div class="fixed-image-panel"></div>
@@ -135,5 +134,7 @@
       </div></footer>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/project.js" type="text/javascript"></script>
+    <script src="js/testimonials.js" type="text/javascript"></script>
+    <script src="js/booking.js"></script>
   </body>
 </html>
