Changed order of sections

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="#testimonials">Work</a></li>
         </ul>
       </nav>
-      <a href="#photos" class="scroll"><img src="images/arrow.svg" alt=""></a>
+      <a href="#book" class="scroll"><img src="images/arrow.svg" alt=""></a>
     </header>
 
     <section id="book" class="booking cf">
